[tool.poetry]
name = "documentation-eccenca-com"
version = "0.0.0"
description = "Documentation repository for eccenca Corporate Memory"
authors = ["Sebastian Tramp <sebastian.tramp@eccenca.com>"]
homepage = "https://github.com/eccenca/documentation.eccenca.com"
readme = "README.md"
packages = [{include = "tools"}]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/eccenca/documentation.eccenca.com/issues"

[tool.poetry.scripts]
dec-tool = 'tools:cli'

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^9.4.0"
CairoSVG = "^2.7.0"
mkdocs = "^1.5.1"
mike = "^1.1.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-glightbox = "^0.3.2"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-autolinks-plugin = "^0.7.0"
mkdocs-redirects = "^1.2.0"
mkdocs-swagger-ui-tag = "^0.6.1"
# if you change this - change also the version ID in Taskfile.yml
mkdocs-material = {git = "git@github.com:eccenca/mkdocs-material-insiders.git", rev = "9.4.7-insiders-4.42.3"}

[tool.poetry.group.dev.dependencies]
linkcheckmd = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

