[tool.poetry]
name = "documentation-eccenca-com"
version = "0.0.0"
description = "Documentation repository for eccenca Corporate Memory"
authors = ["Sebastian Tramp <sebastian.tramp@eccenca.com>"]
homepage = "https://github.com/eccenca/documentation.eccenca.com"
readme = "README.md"
packages = [{include = "tools"}]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/eccenca/documentation.eccenca.com/issues"

[tool.poetry.scripts]
dec-tool = 'tools:cli'

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^11.0.0"
CairoSVG = "^2.7.1"
mkdocs = "^1.6.1"
mike = "^2.1.3"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-glightbox = "^0.4.0"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.2"
mkdocs-swagger-ui-tag = "^0.6.11"
# if you change this - change also the version ID in Taskfile.yml
mkdocs-material = {git = "git@github.com:eccenca/mkdocs-material-insiders.git", rev = "9.5.44-insiders-4.53.14"}

[tool.poetry.group.dev.dependencies]
linkcheckmd = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

